WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255581
[Win] error: undefined symbol: public: class WebCore::LocalFrameView * __cdecl WebCore::Document::view(void) const
https://bugs.webkit.org/show_bug.cgi?id=255581
Summary
[Win] error: undefined symbol: public: class WebCore::LocalFrameView * __cdec...
Fujii Hironori
Reported
2023-04-17 23:35:37 PDT
[Win] error: undefined symbol: public: class WebCore::LocalFrameView * __cdecl WebCore::Document::view(void) const clang-cl reports an error for Release build of Windows port. [2726/5597] Linking CXX shared library bin64\WebCore.dll FAILED: bin64/WebCore.dll lib64/WebCore.lib cmd.exe /C "cd . && "C:\Program Files\CMake\bin\cmake.exe" -E vs_link_dll --intdir=Source\WebCore\CMakeFiles\WebCore.dir --rc=C:\PROGRA~2\WI3CF2~1\10\bin\100190~1.0\x64\rc.exe --mt=C:\PROGRA~2\WI3CF2~1\10\bin\100190~1.0\x64\mt.exe --manifests -- C:\PROGRA~1\LLVM\bin\lld-link.exe /nologo @CMakeFiles\WebCore.rsp /out:bin64\WebCore.dll /implib:lib64\WebCore.lib /pdb:bin64\WebCore.pdb /dll /version:0.0 /machine:x64 /DEBUG /OPT:ICF /OPT:REF /INCREMENTAL:NO /INCREMENTAL:NO /DELAYLOAD:d3d9.dll /DELAYLOAD:dxva2.dll /DELAYLOAD:evr.dll /DELAYLOAD:mf.dll /DELAYLOAD:mfplat.dll && cd ." LINK: command "C:\PROGRA~1\LLVM\bin\lld-link.exe /nologo @CMakeFiles\WebCore.rsp /out:bin64\WebCore.dll /implib:lib64\WebCore.lib /pdb:bin64\WebCore.pdb /dll /version:0.0 /machine:x64 /DEBUG /OPT:ICF /OPT:REF /INCREMENTAL:NO /INCREMENTAL:NO /DELAYLOAD:d3d9.dll /DELAYLOAD:dxva2.dll /DELAYLOAD:evr.dll /DELAYLOAD:mf.dll /DELAYLOAD:mfplat.dll /MANIFEST /MANIFESTFILE:bin64\WebCore.dll.manifest" failed (exit code 1) with the following output: lld-link: error: undefined symbol: public: class WebCore::LocalFrameView * __cdecl WebCore::Document::view(void) const
>>> referenced by C:\home\webkit\gc\Source\WebCore\platform\graphics\win\MediaPlayerPrivateMediaFoundation.cpp:659 >>> Source\WebCore\CMakeFiles\WebCore.dir\platform\graphics\win\MediaPlayerPrivateMediaFoundation.cpp.obj:(private: struct HWND__* __cdecl WebCore::MediaPlayerPrivateMediaFoundation::hostWindow(void))
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2023-04-17 23:44:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12848
EWS
Comment 2
2023-04-17 23:49:50 PDT
Committed
263059@main
(aeb801cf889c): <
https://commits.webkit.org/263059@main
> Reviewed commits have been landed. Closing PR #12848 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-04-17 23:50:20 PDT
<
rdar://problem/108182757
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug