[Win] error: undefined symbol: public: class WebCore::LocalFrameView * __cdecl WebCore::Document::view(void) const https://bugs.webkit.org/show_bug.cgi?id=255581

Unreviewed build fix for Windows Release clang-cl build.

* Source/WebCore/platform/graphics/win/MediaPlayerPrivateMediaFoundation.cpp:
Include "LocalFrame.h".

Canonical link: https://commits.webkit.org/263059@main